--- a/signup.html
+++ b/signup.html
@@ -430,13 +430,13 @@
                 <div
                   class="flex items-center justify-center gap-6 mx-auto md:mx-0"
                 >
-                  <button class="relative w-[80px] h-[80px]">
+                  <!-- <button class="relative w-[80px] h-[80px]">
                     <img
                       class="w-full h-full object-contain"
                       src="imgs/form-fb-button.png"
                       alt="fb connect"
                     />
-                  </button>
+                  </button> -->
                   <button class="relative w-[80px] h-[80px]">
                     <img
                       class="w-full h-full object-contain"
