profile ui corrections fix

--- a/UI/profileincards.html
+++ b/UI/profileincards.html
@@ -39,8 +39,8 @@ include('header.php');
       <!-- Profile Card 1 -->
       <div class="col-md-3">
         <div class="profile-card" data-type="Work profile">
-          <img src="images/busin.png" alt="Business & Employment Profile" >
-          <h5>Business & Employment Profile</h5>
+          <img src="images/busin.png" alt="Professional Profile" >
+          <h5>Professional Profile</h5>
           <p class="bold">Earn $2</p>
         </div>
       </div>
@@ -48,8 +48,8 @@ include('header.php');
       <!-- Profile Card 2 -->
       <div class="col-md-3">
         <div class="profile-card" data-type="Personal Profile">
-          <img src="images/enter.png" alt="Entertainment (TV/Film) Profile">
-          <h5>Entertainment (TV/Film) Profile</h5>
+          <img src="images/enter.png" alt="Entertainment Profile">
+          <h5>Entertainment Profile</h5>
           <p class="bold">Earn $2</p>
         </div>
       </div>
