updated profile names

--- a/UI/profileincards.html
+++ b/UI/profileincards.html
@@ -48,8 +48,8 @@ include('header.php');
       <!-- Profile Card 2 -->
       <div class="col-md-3">
         <div class="profile-card" data-type="Personal Profile">
-          <img src="images/enter.png" alt="Entertainment Profile">
-          <h5>Entertainment Profile</h5>
+          <img src="images/enter.png" alt="Personal Profile">
+          <h5>Personal Profile</h5>
           <p class="bold">Earn $2</p>
         </div>
       </div>
